--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "casper",
-    "description": "A clean, minimal default theme for the Ghost publishing platform",
-    "demo": "https://demo.ghost.io",
+    "name": "fab-casper",
+    "description": "A clean, minimal default theme for the Ghost publishing platform, modified by fabh2o",
+    "demo": "https://blog.fabricemonasterio.dev/",
     "version": "5.7.4",
     "engines": {
         "ghost": ">=5.0.0"
@@ -22,9 +22,9 @@
         "postship": "git fetch && gulp release"
     },
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org/"
+        "name": "Fabrice",
+        "email": "me@fabricemonasterio.dev",
+        "url": "https://blog.fabricemonasterio.dev/"
     },
     "gpm": {
         "type": "theme",
@@ -40,7 +40,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Casper.git"
+        "url": "https://github.com/fabh2o/ghost-theme-casper.git"
     },
     "bugs": "https://github.com/TryGhost/Casper/issues",
     "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
@@ -50,7 +50,7 @@
         "beeper": "2.1.0",
         "cssnano": "5.1.12",
         "gscan": "4.43.1",
-        "gulp": "4.0.2",
+        "gulp": "^5.0.0",
         "gulp-concat": "2.6.1",
         "gulp-livereload": "4.0.2",
         "gulp-postcss": "9.0.1",
@@ -60,7 +60,7 @@
         "postcss": "8.2.13",
         "postcss-color-mod-function": "3.0.3",
         "postcss-easy-import": "4.0.0",
-        "pump": "3.0.0"
+        "pump": "^3.0.2"
     },
     "browserslist": [
         "defaults"
